--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
-            <div class="event listening button" onclick="login();">Login with Facebook</div>
-            <div class="event listening button" onclick="showDialog();">Show Dialog with Facebook</div>
-            <div class="event listening button" onclick="apiTest();">Test API with Facebook</div>
-            <div class="event listening button" onclick="getAccessToken();">Get access token with Facebook</div>
-            <div class="event listening button" onclick="getStatus();">Get login status with Facebook</div>
-            <div class="event listening button" onclick="logout();">Logout with Facebook</div>
+            <div class="event listening button" onclick="login();"><br />Login with Facebook<br /></div>
+            <div class="event listening button" onclick="showDialog();"><br />Show Dialog with Facebook<br /></div>
+            <div class="event listening button" onclick="apiTest();"><br />Test API with Facebook<br /></div>
+            <div class="event listening button" onclick="getAccessToken();"><br />Get access token with Facebook<br /></div>
+            <div class="event listening button" onclick="getStatus();"><br />Get login status with Facebook<br /></div>
+            <div class="event listening button" onclick="logout();"><br />Logout with Facebook<br /></div>
         </div>
         <div id="fb-root"></div>
 				
