--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <script type="text/javascript">
             var login = function () {
                 if (!window.cordova) {
-                    var appId = prompt("Enter FB Application ID", "");
+                    var appId = "881623415189803";
                     facebookConnectPlugin.browserInit(appId);
                 }
                 facebookConnectPlugin.login( ["email"], 
