--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         
         <div id="data">loading ...</div>
         
+        <!--<script src="http://localhost:8080/target/target-script-min.js#anonymous"></script>-->
         <div id="fb-root"></div>
+        <!-- cordova -->
+		<script src="cordova.js"></script>
 	    <!-- cordova facebook plugin -->
 		<script src="cdv-plugin-fb-connect.js"></script>
 	    <!-- facebook js sdk -->
