--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
 		<script src="js/jquery.mobile-1.4.2.min.js"></script>
 
 		<!-- added from r2 -->
-        <!--<script type="text/javascript" charset="utf-8" src="phonegap.js"></script>-->
-        <script type="text/javascript" charset="utf-8" src="js/jquery.mobile-1.4.2.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+        <script type="text/javascript" charset="utf-8" src="jquery_1.5.2.min.js"></script>
 
         <script type="text/javascript" charset="utf-8" src="js/booons.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/interaction.js"></script>
         <script type="text/javascript" src="js/PushNotification.js"></script>
 		<script type="text/javascript" src="js/sha1.js"></script>
+        <script type="text/javascript" src="js/facebookConnectPlugin.js"></script>		
 		
 		<!-- fontawesome link -->
 		<link rel="stylesheet" href="ext/fontawesome/css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+
         <title>Booons app version 2</title>
     </head>
     <body>
@@ -54,7 +56,6 @@
 		</div>
 <!-- /page -->
     </body>
-
 	<script>
 	  // This is called with the results from from FB.getLoginStatus().
 	  function statusChangeCallback(response) {
